sumo/tests/traci/VariableRetrieval/Lane/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 0xa3 0x30 xxx
simstep 6 1
